# freemobile-sms

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  release.yml
freemobile_sms/: __init__.py  _exports.py  cli.py  client.py  models.py  settings.py
tests/: conftest.py  test_cli.py  test_client.py  test_models.py  test_package.py  test_settings.py
