[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freemobile-sms-client"
version = "0.1.0"
description = "Python client for the Free Mobile SMS API — send SMS notifications programmatically."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Marc Chen" }]
keywords = ["free-mobile", "sms", "api", "client", "notification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
]

[project.scripts]
freemobile-sms = "freemobile_sms.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "bump-my-version>=0.25",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["A003"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=freemobile_sms --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["freemobile_sms"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "freemobile_sms/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.hatch.version]
paths = ["freemobile_sms/__init__.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.11",
]
